<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">VerifiMeSDK</string>

    <string name="action_settings">Settings</string>
    <string name="application_id">Application ID</string>
    <string name="upload_documents">Upload Documents</string>
    <string name="document_upload">Document Upload</string>
    <string name="title_activity_take_photo">Take a photo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sample_uploader">Sample Document Uploader</string>
    <string name="email_address">Email Address</string>
    <string name="birthday">Birthday DD/MM/YYYY</string>
    <string name="employer">Employer</string>
</resources>
